# advent-of-code

./: .gitignore
2018/: build.zig  day-01.zig  day-02.zig  day-03.zig  day-04.zig  parse.zig  utils.zig
2019/day-01-part-2/: output.txt
2019/day-03-part-1/: Cargo.toml
2019/day-05-2/: Cargo.toml
2019/day-06-part-1/: Cargo.toml
2019/day-1-1/: Cargo.toml
2019/day-10-part-2/: Cargo.toml
2019/day-11-part-2/: Cargo.toml
2019/day-12-part-1/: Cargo.toml
2019/day-13-part-1/: Cargo.toml
2019/day-16-1/: Cargo.toml
2019/day-25-part-1/: Cargo.toml  all-items  prompt
2019/day-25-part-1/src/: main.rs
2021/: build.zig  day-01.zig  day-02.zig  day-03.zig  day-04.zig  day-05.zig  day-06.zig  day-07.zig  day-08.zig  day-09.zig  day-10.zig  day-11.zig  day-12.zig  day-13.zig  day-14.zig  day-15.zig  day-16.zig  day-17.zig  day-18.zig  day-19.zig  day-20.zig  day-21.zig  day-22.zig  day-23.zig  day-24.zig  day-25.zig  parse.zig  utils.zig
2022/: build.zig  day-00.zig  day-01.zig  day-02.zig  day-03.zig  day-04.zig  day-05.zig  day-06.zig  day-07.zig  day-08.zig  day-09.zig  day-10.zig  day-11.zig  day-12.zig  day-13.zig  day-14.zig  day-15.zig  day-16.zig  day-17.zig  day-18.zig  day-19.zig  day-20.zig  day-21.zig  day-22.zig  day-23.zig  day-24.zig  day-25.zig  util.zig
2023/: .gitignore  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.dot  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  input.sh  justfile
(+120 files in other folders)
