[package]
name = "day-25-part-1"
version = "0.1.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
intcode = { path = "../intcode" }
structopt = "0.3.5"
